...
    <string name="biometric_negative_button_text">Close</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="do_not_ask_again">Don\'t ask again</string>
    <string name="allow">Allow</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="retry">Retry</string>


    <!--    User data type text-->
    <string name="type_display_account">Bank Account</string>
    <string name="type_display_card">Card</string>
...
    <string name="new_restore_dialog_body_text">Please enter the password that was used to make the backup file.</string>
    <string name="restore_error_message">Error while importing data. Please re-verify file and password.</string>
    <string name="restore_complete_message">Data has been successfully restored.</string>
    <string name="restore_in_progress_message">It may take a while to restore data. Sit back and relax !</string>

    <!--     master password dialog-->
    <string name="incorrect_pswrd_message">Password is incorrect !</string>
    <string name="failed_message">Something went wrong! Please try again later.</string>

    <!--    Notification-->
    <string name="notification_backup_channel_id">backup data safebox</string>
    <string name="notification_backup_channel_name">Safe Box Backup</string>
    <string name="notification_backup_channel_desc">This notification helps you to keep track of backup progress</string>
...
    <string name="notification_backup_success">Backup is complete. It is a good idea to keep a copy in cloud</string>
    <string name="notification_permission_rationale_dialog_body">To ensure you\'re always aware of your automatic backups, please allow notifications.\nYou will be alerted when a backup is complete or if an issue occurs.</string>
    <string name="notification_permission_rationale_dialog_heading">Need Notification permission</string>

    <!--    Record screen-->
    <string name="loading_data">Loading your data …</string>
    <string name="no_record">Start fresh by adding a record or bring back your data from a backup.</string>
    <string name="new_record_button">Add a new record</string>
    <string name="restore_records_button">Restore data</string>
    <string name="no_filtered_record_title">Oops! No results here.</string>
    <string name="no_filtered_record_body">We couldn\'t find anything matching your search. Try adjusting your filters or checking for typos.</string>


    <!--    Other-->
    <string name="app_name">composeapp</string>
    <!--    <string name="app_name">Safe Box</string>-->
    <string name="app_subtitle">Safely store your private data</string>
    <string name="enter_password">Enter password </string>
    <string name="blank_validation_text">Enter something !</string>
    <string name="length_validation_text">Too short !</string>
    <string name="special_char_validation_text">Enter a special character (e.g. @, *, $)</string>
    <string name="case_validation_text">Must include at least one uppercase(A) and one lowercase letter(a).</string>
    <string name="numeric_validation_text">Enter at least two numbers (e.g. 1, 2, 3)</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="unlock">unlock</string>
    <string name="collapse">Collapse</string>
    <string name="login_data">Login Data</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_card">Bank Card</string>
    <string name="secure_note">Secure Note</string>
    <string name="enter_hint">Enter a hint</string>
    <string name="show_hint">Show Hint</string>
    <string name="hide_hint">Hide Hint</string>
    <string name="hint">Hint</string>
    <string name="title">Title </string>
    <string name="url">URL</string>
    <string name="user_id">User Id </string>
    <string name="notes">Notes</string>
    <string name="bank_account_data">Bank Account Data</string>
    <string name="account_number">Account Number </string>
...
    <string name="customer_id">Customer Id</string>
    <string name="branch_code">Branch Code</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_address">Branch Address</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="micr_code">MICR Code</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="password_is_ok">Password is OK</string>
    <string name="welcome">Welcome !</string>
    <string name="set_password_help_text">Set a strong master password</string>
    <string name="timeout_dialog_title">Timeout</string>
    <string name="timeout_dialog_message">You were away for too long. Please click OK to login to app again</string>
    <string name="timeout_dialog_positive_button_text">OK</string>
    <string name="created_on">Created on</string>
    <string name="updated_on">Updated on</string>
...
